--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,15 @@
 server.port=9090
 
 ## Database connection
-spring.datasource.url=jdbc:mysql://localhost:3306/trip
-spring.datasource.username=root
-spring.datasource.password=0000
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+##spring.datasource.url=jdbc:mysql://localhost:3306/trip
+##spring.datasource.username=root
+##spring.datasource.password=0000
+##spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://taskmanager-database.mysql.database.azure.com:3306/trip?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.username=yukyeong
+spring.datasource.password=hyk9060@
 
 
 #spring.application.name=traveler
